web/src/components/header.module.css
@import '../styles/custom-media.css';
@import '../styles/custom-properties.css';

.root {
  position: relative;
  z-index: 9999;
}

.wrapper {
  position: fixed;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  margin: 0 auto;

  /* Set styles for vertical navbar */
  @media (--media-min-small) {
    text-align: left;
    position: fixed;
    right: 30px;
    width: 0;
    height: 100%;
    text-transform: uppercase;
    letter-spacing: .20rem;
  }
}

.branding {
  font-weight: 600;
  flex: 1;

  @nest & a {
    display: inline-block;
    padding: 0.5em;
    color: inherit;
    text-decoration: none;

    @media (hover: hover) {
      @nest &:hover {
        color: var(--color-accent);
      }
    }
  }
}

/*
Mobile navigation toolbar and active navigation styles are heavily inspired by gatsbyjs.org
*/
.nav {
  background: white;

  @nest & ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    border-top-style: solid;
    border-top-width: 1px;
    border-color: #f0f0f2;
    left: 0;
    right: 0;
  }

  @nest & ul li a {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    border-radius: 2px;
    color: var(--color-black);
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    font-size: 0.875rem;
    line-height: 1;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    position: relative;
    text-align: center;
    -webkit-text-decoration: none;
    text-decoration: none;
    width: 100%;
    height: 4rem;
  }

  @media (hover: hover) {
    @nest & ul li a:hover {
      color: var(--color-accent);
    }
  }

  /* Vertical navbar styling */
  @media (--media-min-small) {
    display: block;

    @nest & ul {
      position: absolute;
      left: 0;
      padding: 0;
      white-space: nowrap;
      transform-origin: left bottom;
      transform: rotate(-90deg);
      bottom: 30px;
      /* Unset cascading styles to fix width and layout of navbar */
      -webkit-box-pack: unset;
      -webkit-justify-content: unset;
      -ms-flex-pack: unset;
      justify-content: unset;
    }

    @nest & ul li a {
      padding: 0 15px;
      transition: color .3s;
      color: var(--color-black);
    }
  }
}

.active {
  color: var(--color-accent) !important;
  font-weight: 700;
}

.active::before {
  box-sizing: inherit;
  background-color: var(--color-accent);
  content: " ";
  height: 2px;
  width: 50%;
  position: absolute;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  left: 50%;
  top: -1px;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

